fix inline transaction overview overflow

--- a/frontend/src/components/details-card/DetailsCard.module.scss
+++ b/frontend/src/components/details-card/DetailsCard.module.scss
@@ -3,7 +3,6 @@
 @import "styles/scrollbars";
 
 .root {
-  overflow: scroll;
   background: $gray-100;
   @include hiddenScrollbars();
 
