--- a/frontend/src/pages/interactions/components/outcome/InteractionOutcome.module.scss
+++ b/frontend/src/pages/interactions/components/outcome/InteractionOutcome.module.scss
@@ -8,4 +8,8 @@
     padding: $spacing-base;
   }
 
+  .transactionOverview {
+    height: 100%;
+  }
+
 }
